added entity and repositories